// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should render correctly 1`] = `
<div>
  <button
    class="jsx-2859537842 btn "
    type="button"
  >
    <div
      class="text"
    />
  </button>
</div>
`;

exports[`Code should repspond to changed by width 1`] = `
<div>
  <pre
    class="jsx-665532566 "
  >
    <code
      class="jsx-665532566"
    >
      code
    </code>
  </pre>
</div>
`;

exports[`Code should support block mode 1`] = `
<div>
  <pre
    class="jsx-2559903272 "
  >
    <code
      class="jsx-2559903272"
    >
      code
    </code>
  </pre>
</div>
`;
